# MacroGraph

./: .gitignore  AGENTS.md  API_TESTER_README.md  Cargo.toml  Demo.ts  PLAN.md  ProjectRuntime.ts  README.md  api-tester-examples.ts  biome.json  desktop_dev_err.txt  desktop_dev_out.txt  dev_err.txt  dev_out.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  private_key.pem  tailwind.config.js  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/: createTag.js
.github/actions/install-desktop-deps/: action.yml
.github/actions/setup-js/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: cache-factory.yaml  ci.yaml  createTag.js  opencode.yml  publish-check-run.sh  publish-server.yaml  release-desktop.yaml
.opencode/plugin/: auto-format.ts
agents/: effect-ts.md  project-runtime.md
app/: .env  .env.example  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  TwitchAuth.tsx  UIStore.tsx  URL.ts  dev.ts  entry-server.tsx  http.ts  index.css  index.tsx  rspc.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs  oauth.rs  websocket.rs
app/src-tauri/src/http/: commands.rs  error.rs  mod.rs
app/src/components/: PrintOutput.tsx
app/src/contexts/: Core.tsx  Node.tsx
app/src/rspc/: types.ts
app/src/settings/: Discord.tsx  OBS.tsx  Streamlabs.tsx  Twitch.tsx  index.tsx  ui.tsx
apps/desktop/: .env.example  .gitignore  app.config.ts  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/plugins/tauri-plugin-midi/: Cargo.toml  README.md  package.json
apps/desktop/plugins/tauri-plugin-midi/guest-js/: bindings.ts  index.ts
apps/desktop/plugins/tauri-plugin-midi/src/: lib.rs
apps/desktop/plugins/tauri-plugin-rdev/: Cargo.toml  package.json
apps/desktop/plugins/tauri-plugin-rdev/guest-js/: bindings.ts
apps/desktop/plugins/tauri-plugin-rdev/src/: lib.rs
apps/desktop/src/: Editor.tsx  RemoteHostDialog.tsx  api.ts  app.css  app.tsx  auto-imports.d.ts  commands.ts  core.ts  entry-client.tsx  entry-server.tsx  env.ts  http.ts  midi.ts  nativeBridges.ts  platform.ts  remoteHostBridge.ts  remoteHostSettings.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: crash_log.rs  fs.rs  main.rs  oauth.rs  obs_native.rs  outbound_client.rs  remote_host.rs  shell.rs  websocket.rs
apps/desktop/src-tauri/src/http/: commands.rs  error.rs
apps/new-playground/: index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
apps/new-playground/src/: Runtime.ts  auto-imports.d.ts  dev-server.ts  entry-client.tsx  entry-server.ts  entry-server.tsx  errors.ts  global.d.ts  index.test.ts  index.ts  io.ts  main.ts  node.ts  package-settings-utils.ts  package-settings-utils.tsx  package-utils.ts  package.ts  playground.ts  playground.tsx  prod-server.ts  project.ts  rpc.ts  schema.ts  server-test.ts  shared.ts  (+4 more)
apps/remote-editor/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/server/: .gitignore  Dockerfile  index.html  macrograph-instance.json  package.json  server-state.json  tsconfig.json  uno.config.ts  vercel.json  vite.config.ts
apps/storybook/: package.json  postcss.config.mjs  tailwind.config.mjs  tsconfig.json  vite.config.ts
apps/web/: app.config.ts  drizzle.config.ts  package.json  postcss.config.js  private_key.pem  public_key.pem  tailwind.config.js  tsconfig.json  ui.config.json  uno.config.ts  vite.config.ts
architecture/: server-login.md
core/: package.json  tsconfig.json  tsconfig.tsbuildinfo
core-rust/: Cargo.toml
core-rust/src/: fs.rs  http.rs  lib.rs  twitch.html  twitch.rs  websocket.rs
core/src/: client.ts  core.ts  index.ts  types.ts
crates/deno_experiments/: Cargo.toml  main.ts
crates/regex-syntax-wasm/: Cargo.toml  package.json
crates/tauri-plugin-kb-mouse/: Cargo.toml  package.json
crates/tauri-plugin-kb-mouse/guest-js/: bindings.ts
crates/tauri-plugin-kb-mouse/src/: lib.rs
crates/tauri-plugin-midi/: Cargo.toml  package.json  tsconfig.json
crates/tauri-plugin-midi/guest-js/: bindings.ts  index.ts
crates/tauri-plugin-midi/src/: lib.rs
crates/websocket/: Cargo.toml
docs/: editor-runtime-split.md  llm-macrograph-context.md
interface/: package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.ts
interface/src/: ActionHistory.tsx  ConfigDialog.tsx  ConnectionsDialog.tsx  KeyboardShortcutsDialog.tsx  LoadCheckerDialog.tsx  Sidebars.tsx  UIStore.tsx  actions.ts  auto-imports.d.ts  clipboard.ts  context.ts  editorConfigStorage.ts  editorIndexedDb.ts  frameGraphNode.ts  global.css  graphPerf.ts  index.tsx  keyboardShortcuts.ts  mosaicDebug.ts  mosaicLayout.ts  mosaicPaneContext.ts  nodeInvocationLog.ts  paneResizeSession.ts  platform.ts  projectStorage.ts  randomUUID.ts  remoteHistorySync.ts  rspc.ts  tabDragSession.ts  util.ts  util.tsx
json/: package.json
json/src/: index.test.ts  pkg.ts  type.ts
patches/: @effect__platform-node-shared.patch  @kobalte__core@0.13.4.patch  @kobalte__core@0.13.7.patch  @kobalte__utils@0.7.2.patch  vite-plugin-solid.patch
src/: App.tsx
src/bindings/: Connection.ts  Graph.ts  List.ts  ListItem.ts  ListType.ts  Node.ts  NodeSchema.ts  NodeSchemaType.ts  Package.ts  Position.ts  Primitive.ts  PrimitiveType.ts  Request.ts  Response.ts  Value.ts  ValueType.ts  index.ts
src/contexts/: Core.tsx  Node.tsx  index.ts
src/models/: Core.ts  Graph.ts  IO.ts  Node.ts  NodeSchema.ts  Package.ts  index.ts
src/stores/: UI.tsx  index.ts
src/utils/: pins.ts
typesystem/: package.json  tsconfig.json
typesystem/src/: base.ts  enum.ts  list.ts  map.ts  option.ts  serialized.ts  utils.ts  wildcard.ts
ui/: package.json
ui/src/: settings.tsx
web/: .env.example  .env.local  .gitignore  astro.config.mjs  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts
web/app/: env.mjs
web/src/: Editor.tsx  app.tsx  entry-server.tsx
(+385 files in other folders)
