[package]
name = "macrograph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
rspc = "0.1.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
specta = "1.0.3"
