[package]
name = "macrograph-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.18", features = ["macros"] }
base64 = "0.21.4"
opener = "0.6.1"
reqwest = { version = "0.11.17", features = ["json"] }
rspc = { workspace = true, features = ["uuid", "chrono", "tracing", "alpha", "unstable"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
specta = "1.0.3"
tokio = { version = "1.28.0", features = ["sync"] }
tower-http = { version = "0.4.0", features = ["cors"] }
url = "2.3.1"
urlencoding = "2.1.2"
