[package]
name = "stream-control"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = [] }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket = { path = "../../crates/websocket" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
