[package]
name = "macrograph"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
macrograph-core = { path = "../../core-rust" }
tauri = {  version = "1.3.0", features = ["fs-all", "http-all", "http-multipart", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket = { path = "../../crates/websocket" }
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.28.0", features = ["macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
