[package]
name = "tauri-plugin-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
serde = "1.0.195"
specta = "=2.0.0-rc.7"
tauri = "1.5.4"
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"] }
