[package]
name = "tauri-plugin-midi"
description = "A WebMIDI-compatible plugin for Tauri"
license = "MIT"
version = "0.0.0"
authors = [ "You" ]
edition = "2021"
rust-version = "1.60"
exclude = ["/examples"]

[dependencies]
midir = "0.9.1"
serde = "1.0.195"
specta = "=2.0.0-rc.7"
tauri = { version = "1.5.4" }
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"] }
tokio = { version = "1.35.1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
coremidi-hotplug-notification = "0.1.1"
