[package]
name = "tauri-plugin-rdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { git = "https://github.com/brendonovich/rdev", features = [
    "macos_noloop",
    "serialize",
    "specta",
] }
specta = "=2.0.0-rc.7"
tauri = { version = "1.5.4" }
tauri-specta = { version = "=2.0.0-rc.4", features = [
    "javascript",
    "typescript",
] }
tokio = { version = "1.37.0", features = ["time"] }
